Add implementations for GetReflogs, ResetLocal, CheckUpdate and RevertUpdate.
