# docs/swagger.yaml
@@ -444,6 +444,18 @@ paths:
       summary: Clone a repository.
       tags:
       - repository
+  /fabric/repository/logs:
+    get:
+      description: '`git reflog` is executed through `exec.Command()` to show the
+        reflogs.'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: successful operation
+      summary: Show the reflog.
+      tags:
+      - repository
   /fabric/repository/pull:
     post:
       consumes:
@@ -455,6 +467,41 @@ paths:
         "200":
           description: successful operation
       summary: Pull changes from a remote repository.
+      tags:
+      - repository
+  /fabric/repository/reset:
+    post:
+      description: '`git fetch`, `git reset --hard`, `git clean -xdf` is executed
+        through `exec.Command()` to reset local repository.'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: successful operation
+      summary: Reset local repository.
+      tags:
+      - repository
+  /fabric/repository/revert:
+    post:
+      description: Revert most recent update.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: successful operation
+      summary: Revert most recent update.
+      tags:
+      - repository
+  /fabric/repository/updates:
+    get:
+      description: '`git log HEAD..origin/main --oneline` is executed through `exec.Command()`
+        to print incoming changes.'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: successful operation
+      summary: Show incoming changes.
       tags:
       - repository
 swagger: "2.0"
